--- a/classif.ipynb
+++ b/classif.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,6 +287,8 @@
     "        if \"lower\" in self.preprocessing:\n",
     "            #lowercase\n",
     "            phrase = phrase.lower()\n",
+    "        if \"newlines\" in self.preprocessing:\n",
+    "            phrase = \" \".join(filter(None, phrase.split(\"\\n\")))\n",
     "        if \"punc\" in self.preprocessing:\n",
     "            #remove punctuation\n",
     "            phrase = phrase.translate(str.maketrans('','',string.punctuation))\n",
@@ -446,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -479,19 +481,19 @@
        "    <tr>\n",
        "      <th>1.0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[\\nsave, up, to, 70%, on, life, insurance.\\nwh...</td>\n",
+       "      <td>[save, up, to, 70%, on, life, insurance., why,...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2.0</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>[1), fight, the, risk, of, cancer!\\nhttp://www...</td>\n",
+       "      <td>[1), fight, the, risk, of, cancer!, http://www...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.0</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>[1), fight, the, risk, of, cancer!\\nhttp://www...</td>\n",
+       "      <td>[1), fight, the, risk, of, cancer!, http://www...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -503,7 +505,7 @@
        "    <tr>\n",
        "      <th>5.0</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>[i, thought, you, might, like, these:\\n1), sli...</td>\n",
+       "      <td>[i, thought, you, might, like, these:, 1), sli...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -512,20 +514,20 @@
       ],
       "text/plain": [
        "      id                                             ppBody label\n",
-       "1.0  0.0  [\\nsave, up, to, 70%, on, life, insurance.\\nwh...     1\n",
-       "2.0  1.0  [1), fight, the, risk, of, cancer!\\nhttp://www...     1\n",
-       "3.0  2.0  [1), fight, the, risk, of, cancer!\\nhttp://www...     1\n",
+       "1.0  0.0  [save, up, to, 70%, on, life, insurance., why,...     1\n",
+       "2.0  1.0  [1), fight, the, risk, of, cancer!, http://www...     1\n",
+       "3.0  2.0  [1), fight, the, risk, of, cancer!, http://www...     1\n",
        "4.0  3.0  [#############################################...     1\n",
-       "5.0  4.0  [i, thought, you, might, like, these:\\n1), sli...     1"
+       "5.0  4.0  [i, thought, you, might, like, these:, 1), sli...     1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = Dataset(dfSpam)\n",
+    "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\"])\n",
     "d.pp_df.head()"
    ]
   },
