Removing empty strings, add option to return paragraph not list

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -5,14 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification with Linear Regression\n",
+    "# Classification with Logistic Regression\n",
     "\n",
-    "Experimental notebook for classification of phishing emails using basic Linear Regression"
+    "Experimental notebook for classification of phishing emails using basic Logistic Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "5.0  4.0  I thought you might like these:\\n1) Slim Down ...     1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,17 +226,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Dataset:\n",
-    "    def __init__(self, df, preprocessing=[\"lower\"], feature_selection=[\"alltokens\"]):\n",
+    "    def __init__(self, df, preprocessing=[\"lower\"], feature_selection=[\"alltokens\"], retList=False):\n",
     "        \n",
     "        #read preprocessing and feature_selection configuration\n",
     "        self.preprocessing = preprocessing\n",
     "        self.feature_selection = feature_selection\n",
     "        self.data = df\n",
+    "        self.retList = retList\n",
     "\n",
     "        # === define various processors and regexes for various preprocessing/feature selection methods ===\n",
     "\n",
@@ -431,7 +432,10 @@
     "                    else:\n",
     "                        phrase.append(split[i])\n",
     "\n",
-    "        return phrase\n",
+    "        if self.retList:\n",
+    "            return phrase\n",
+    "        else:#rejoin into one text body in case want to do different tokenisation/one-hot later on\n",
+    "            return \" \".join(filter(None, phrase))\n",
     "\n",
     "    def process_phrases(self):\n",
     "        \"\"\"extract bodies\"\"\"\n",
@@ -448,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -481,31 +485,31 @@
        "    <tr>\n",
        "      <th>1.0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[save, up, to, 70%, on, life, insurance., why,...</td>\n",
+       "      <td>save up to 70% on life insurance. why spend mo...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2.0</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>[1), fight, the, risk, of, cancer!, http://www...</td>\n",
+       "      <td>1) fight the risk of cancer! http://www.adclic...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.0</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>[1), fight, the, risk, of, cancer!, http://www...</td>\n",
+       "      <td>1) fight the risk of cancer! http://www.adclic...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4.0</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>[#############################################...</td>\n",
+       "      <td>##############################################...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.0</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>[i, thought, you, might, like, these:, 1), sli...</td>\n",
+       "      <td>i thought you might like these: 1) slim down -...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -514,21 +518,99 @@
       ],
       "text/plain": [
        "      id                                             ppBody label\n",
-       "1.0  0.0  [save, up, to, 70%, on, life, insurance., why,...     1\n",
-       "2.0  1.0  [1), fight, the, risk, of, cancer!, http://www...     1\n",
-       "3.0  2.0  [1), fight, the, risk, of, cancer!, http://www...     1\n",
-       "4.0  3.0  [#############################################...     1\n",
-       "5.0  4.0  [i, thought, you, might, like, these:, 1), sli...     1"
+       "1.0  0.0  save up to 70% on life insurance. why spend mo...     1\n",
+       "2.0  1.0  1) fight the risk of cancer! http://www.adclic...     1\n",
+       "3.0  2.0  1) fight the risk of cancer! http://www.adclic...     1\n",
+       "4.0  3.0  ##############################################...     1\n",
+       "5.0  4.0  i thought you might like these: 1) slim down -...     1"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\"])\n",
+    "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\"], retList=False)\n",
     "d.pp_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7328"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(d.pp_df[d.pp_df['label'] == \"1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11322"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(d.pp_df[d.pp_df['label'] == \"0\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "negative = d.pp_df[d.pp_df['label'] == \"0\"].sample(7328)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"save up to 70% on life insurance. why spend more than you have to?life quote savings ensuring your family's financial security is very important. life quote savings makes buying life insurance simple and affordable. we provide free access to the very best companies and the lowest rates.life quote savings is fast, easy and saves you money! let us help you get started with the best values in the country on new coverage. you can save hundreds or even thousands of dollars by requesting a free quote from lifequote savings. our service will take you less than 5 minutes to complete. shop and compare. save up to 70% on all types of life insurance! click here for your free quote!protecting your family is the best investment you'll ever make! if you are in receipt of this email in error and/or wish to be removed from our list, please click here and type remove. if you reside in any state which prohibits e-mail solicitations for insurance, please disregard this email.\""
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.pp_df.iloc[0]['ppBody']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
