--- a/classif.ipynb
+++ b/classif.ipynb
@@ -606,11 +606,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import ShuffleSplit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = d.pp_df.iloc[:, 0:2]\n",
+    "y = d.pp_df.iloc[:, 2]\n",
+    "\n",
+    "ss = ShuffleSplit(n_splits=1, test_size=0.25, random_state=10)\n",
+    "indexes = list(ss.split(X, y))\n",
+    "train_set  = indexes[0][0]\n",
+    "test_set  = indexes[0][1]\n",
+    "Xtrain = X.iloc[train_set, :]\n",
+    "ytrain = y.iloc[train_set]\n",
+    "Xtest = X.iloc[test_set, :]\n",
+    "ytest = y.iloc[test_set]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>ppBody</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3829.0</th>\n",
+       "      <td>3828.0</td>\n",
+       "      <td>url: http://boingboing.net/#85494694 date: not...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>938.0</th>\n",
+       "      <td>937.0</td>\n",
+       "      <td>do you have bad credit and want to have good c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2267.0</th>\n",
+       "      <td>2266.0</td>\n",
+       "      <td>subject: final call : esslli98 - workshop corp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22984.0</th>\n",
+       "      <td>22984</td>\n",
+       "      <td>subject: fw : capital book capital curve model...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12307.0</th>\n",
+       "      <td>12307</td>\n",
+       "      <td>subject: fabulous - look and feel 20 years you...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19138.0</th>\n",
+       "      <td>19138</td>\n",
+       "      <td>subject: financial controller job opportunity ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1955.0</th>\n",
+       "      <td>1954.0</td>\n",
+       "      <td>subject: call : glow phonology workshop the gl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2245.0</th>\n",
+       "      <td>2244.0</td>\n",
+       "      <td>&gt;&gt;&gt;&gt;&gt; \"r\" == russell turpin writes: r&gt; things ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18508.0</th>\n",
+       "      <td>18508</td>\n",
+       "      <td>subject: request for 3 / 31 / 01 stock holding...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30231.0</th>\n",
+       "      <td>30231</td>\n",
+       "      <td>subject: mgmt 656 here is your latest roster ....</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4663 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id                                             ppBody\n",
+       "3829.0   3828.0  url: http://boingboing.net/#85494694 date: not...\n",
+       "938.0     937.0  do you have bad credit and want to have good c...\n",
+       "2267.0   2266.0  subject: final call : esslli98 - workshop corp...\n",
+       "22984.0   22984  subject: fw : capital book capital curve model...\n",
+       "12307.0   12307  subject: fabulous - look and feel 20 years you...\n",
+       "...         ...                                                ...\n",
+       "19138.0   19138  subject: financial controller job opportunity ...\n",
+       "1955.0   1954.0  subject: call : glow phonology workshop the gl...\n",
+       "2245.0   2244.0  >>>>> \"r\" == russell turpin writes: r> things ...\n",
+       "18508.0   18508  subject: request for 3 / 31 / 01 stock holding...\n",
+       "30231.0   30231  subject: mgmt 656 here is your latest roster ....\n",
+       "\n",
+       "[4663 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xtest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3829.0     0\n",
+       "938.0      1\n",
+       "2267.0     0\n",
+       "22984.0    0\n",
+       "12307.0    1\n",
+       "          ..\n",
+       "19138.0    0\n",
+       "1955.0     0\n",
+       "2245.0     0\n",
+       "18508.0    0\n",
+       "30231.0    0\n",
+       "Name: label, Length: 4663, dtype: object"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ytest"
    ]
   },
   {
