Fix some tokenisation

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "5.0  4.0  I thought you might like these:\\n1) Slim Down ...     1"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,9 +207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\theco\\AppData\\Roaming\\Python\\Python310\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "#spacy imports\n",
     "import spacy\n",
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -485,19 +494,19 @@
        "    <tr>\n",
        "      <th>1.0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>save up to 70% on life insurance. why spend mo...</td>\n",
+       "      <td>save 70% life insurance. spend to?life quote s...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2.0</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>1) fight the risk of cancer! http://www.adclic...</td>\n",
+       "      <td>1) fight risk cancer! http://www.adclick.ws/p....</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.0</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1) fight the risk of cancer! http://www.adclic...</td>\n",
+       "      <td>1) fight risk cancer! http://www.adclick.ws/p....</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -509,7 +518,7 @@
        "    <tr>\n",
        "      <th>5.0</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>i thought you might like these: 1) slim down -...</td>\n",
+       "      <td>thought might like these: 1) slim - guaranteed...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -518,26 +527,56 @@
       ],
       "text/plain": [
        "      id                                             ppBody label\n",
-       "1.0  0.0  save up to 70% on life insurance. why spend mo...     1\n",
-       "2.0  1.0  1) fight the risk of cancer! http://www.adclic...     1\n",
-       "3.0  2.0  1) fight the risk of cancer! http://www.adclic...     1\n",
+       "1.0  0.0  save 70% life insurance. spend to?life quote s...     1\n",
+       "2.0  1.0  1) fight risk cancer! http://www.adclick.ws/p....     1\n",
+       "3.0  2.0  1) fight risk cancer! http://www.adclick.ws/p....     1\n",
        "4.0  3.0  ##############################################...     1\n",
-       "5.0  4.0  i thought you might like these: 1) slim down -...     1"
+       "5.0  4.0  thought might like these: 1) slim - guaranteed...     1"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\"], retList=False)\n",
+    "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_stoplist\"], retList=False)\n",
     "d.pp_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5633.0     well, thanks everyone explanations. still disa...\n",
+       "3680.0     subject: ' satisfy fgtpril man endowed 7 - 8 \"...\n",
+       "4456.0     | date: fri, 19 jul 2002 14:28:42 +0100 | from...\n",
+       "341.0                                                  empti\n",
+       "1001.0     dear sirs, know esteemed company beach towels ...\n",
+       "4637.0     quoting stephen_reilly@dell.com (stephen_reill...\n",
+       "4445.0     caolan mcnamara wrote: > tue, aug 06, 2002 04:...\n",
+       "3793.0     url: http://boingboing.net/#85485775 date: sup...\n",
+       "8795.0     subject: investment idea investor aiert - l r ...\n",
+       "12269.0    subject: heyz darling would like keep company ...\n",
+       "Name: ppBody, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.pp_df.sample(10)['ppBody']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +585,7 @@
        "7328"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +605,7 @@
        "11322"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,16 +625,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"save up to 70% on life insurance. why spend more than you have to?life quote savings ensuring your family's financial security is very important. life quote savings makes buying life insurance simple and affordable. we provide free access to the very best companies and the lowest rates.life quote savings is fast, easy and saves you money! let us help you get started with the best values in the country on new coverage. you can save hundreds or even thousands of dollars by requesting a free quote from lifequote savings. our service will take you less than 5 minutes to complete. shop and compare. save up to 70% on all types of life insurance! click here for your free quote!protecting your family is the best investment you'll ever make! if you are in receipt of this email in error and/or wish to be removed from our list, please click here and type remove. if you reside in any state which prohibits e-mail solicitations for insurance, please disregard this email.\""
+       "\"save 70% life insurance. spend to?life quote savings ensuring family's financial security important. life quote savings makes buying life insurance simple affordable. provide free access best companies lowest rates.life quote savings fast, easy saves money! let us help get started best values country new coverage. save hundreds even thousands dollars requesting free quote lifequote savings. service take less 5 minutes complete. shop compare. save 70% types life insurance! click free quote!protecting family best investment ever make! receipt email error and/or wish removed list, please click type remove. reside state prohibits e-mail solicitations insurance, please disregard email.\""
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,150 +674,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>ppBody</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3829.0</th>\n",
-       "      <td>3828.0</td>\n",
-       "      <td>url: http://boingboing.net/#85494694 date: not...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>938.0</th>\n",
-       "      <td>937.0</td>\n",
-       "      <td>do you have bad credit and want to have good c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2267.0</th>\n",
-       "      <td>2266.0</td>\n",
-       "      <td>subject: final call : esslli98 - workshop corp...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22984.0</th>\n",
-       "      <td>22984</td>\n",
-       "      <td>subject: fw : capital book capital curve model...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12307.0</th>\n",
-       "      <td>12307</td>\n",
-       "      <td>subject: fabulous - look and feel 20 years you...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19138.0</th>\n",
-       "      <td>19138</td>\n",
-       "      <td>subject: financial controller job opportunity ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1955.0</th>\n",
-       "      <td>1954.0</td>\n",
-       "      <td>subject: call : glow phonology workshop the gl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2245.0</th>\n",
-       "      <td>2244.0</td>\n",
-       "      <td>&gt;&gt;&gt;&gt;&gt; \"r\" == russell turpin writes: r&gt; things ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18508.0</th>\n",
-       "      <td>18508</td>\n",
-       "      <td>subject: request for 3 / 31 / 01 stock holding...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30231.0</th>\n",
-       "      <td>30231</td>\n",
-       "      <td>subject: mgmt 656 here is your latest roster ....</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4663 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             id                                             ppBody\n",
-       "3829.0   3828.0  url: http://boingboing.net/#85494694 date: not...\n",
-       "938.0     937.0  do you have bad credit and want to have good c...\n",
-       "2267.0   2266.0  subject: final call : esslli98 - workshop corp...\n",
-       "22984.0   22984  subject: fw : capital book capital curve model...\n",
-       "12307.0   12307  subject: fabulous - look and feel 20 years you...\n",
-       "...         ...                                                ...\n",
-       "19138.0   19138  subject: financial controller job opportunity ...\n",
-       "1955.0   1954.0  subject: call : glow phonology workshop the gl...\n",
-       "2245.0   2244.0  >>>>> \"r\" == russell turpin writes: r> things ...\n",
-       "18508.0   18508  subject: request for 3 / 31 / 01 stock holding...\n",
-       "30231.0   30231  subject: mgmt 656 here is your latest roster ....\n",
-       "\n",
-       "[4663 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Xtest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3829.0     0\n",
-       "938.0      1\n",
-       "2267.0     0\n",
-       "22984.0    0\n",
-       "12307.0    1\n",
-       "          ..\n",
-       "19138.0    0\n",
-       "1955.0     0\n",
-       "2245.0     0\n",
-       "18508.0    0\n",
-       "30231.0    0\n",
-       "Name: label, Length: 4663, dtype: object"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ytest"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "tfidf = TfidfVectorizer(sublinear_tf=True, min_df=5, norm='l2', encoding='latin-1', ngram_range=(1, 2), stop_words='english', max_features=10000)\n"
    ]
   },
   {
